# innowise_laboratory

./: pyproject.toml  requirements.txt
lecture_2/: main.py
lecture_3/: main.py
lecture_4/: .sql  school.db
lecture_5/book_api/: Book.db  main.py
